--- a/v2/css/style.css
+++ b/v2/css/style.css
@@ -3,45 +3,44 @@ html{
 }
 
 body{
-    background-image: url(../img/Background.png);
+    background-image: url(../img/Background.jpg);
     background-size: cover;
+    background-repeat: no-repeat;
+    background-position-x:center;
+    background-position-y:center;
     color: white;
+    margin: 0;
 }
 
 header{
     display: flex;
-    height: 20%;
-    text-align: center;
+    height: 30px;
     color: white;
+    background-color: #0c7880;
+    justify-content: space-between;
 }
 
 .header{
-    justify-content: space-between;
-    height: 18%;
-    width: 30%;
-    border: #9e9fa0 1px solid;
-    border-radius: 3px;
+    height: 30px;
+    border: none;
     background-color: #0c7880;
     color: white;
 }
 
 .header:hover{
     justify-content: space-between;
-    height: 18%;
-    width: 30%;
-    border: #808183 1px solid;
+    height: 30px;
     border-radius: 3px;
     background-color: #0a6268;
 }
 
 .dropbtn {
-    justify-content: space-between;
     background-color: #0c7880;
-    border: #9e9fa0 1px solid;
-    justify-content: space-between;
     color: white;
-    border-radius: 3px;
-}
+    border: none;
+    clear: both;
+    height: 30px;
+    }
 
 .dropdown {
     position: relative;
@@ -66,11 +65,20 @@ header{
     display: block;
 }
 
-.dropdown-content a:hover {background-color: #0a6268;}
+.dropdown-content a:hover {
+    background-color: #0a6268;
+    
+}
 
-.dropdown:hover .dropdown-content {display: block; background-color: #0a6268;}
+.dropdown:hover .dropdown-content {
+    display: block; 
+    background-color: #0a6268;
+}
 
-.dropdown:hover .dropbtn {background-color: #0a6268;}
+.dropdown:hover .dropbtn {
+    background-color: #0a6268;
+    border-radius: 3px;
+}
 
 
 .agrupado{
@@ -152,3 +160,23 @@ a{
     text-decoration: none;
     color: inherit;
 }
+
+.footer2{
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #02181a;
+    height: 60px;
+}
+
+.wiki_link{
+    background-color: #02181a;
+    border: none;
+    color: white;
+    font-size: 40px;
+}
+
+.formulario.boton{
+    background-color: #9e9fa0;
+    color: white;
+}
+
