--- a/v2/css/style.css
+++ b/v2/css/style.css
@@ -17,7 +17,7 @@ header{
     height: 30px;
     color: white;
     background-color: #0c7880;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .header{
